--- a/syncDataToElastic/config.ini
+++ b/syncDataToElastic/config.ini
@@ -5,27 +5,44 @@ user = root
 password = 124563
 database = mysql
 
-[huhu-qa-question]
-schemaName = huhu-qa
-tableName = question
-indexName = huhu-qa
-typeName = question
-
-[huhu-qa-answer]
-schemaName = huhu-qa
-tableName = answer
-indexName = huhu-qa
-typeName = answer
-
-[huhu-user]
-schemaName = huhu-user
-tableName = user
-indexName = huhu-user
-typeName = user
-
 [elasticsearch]
 host = 192.168.170.143
 port = 9200
+
+
+[data-info]
+data-count = 3
+
+data-schemaName[0] = huhu-qa
+data-tableName[0] = question
+data-indexName[0] = huhu-qa
+data-typeName[0] = question
+
+data-schemaName[1] = huhu-qa
+data-tableName[1] = answer
+data-indexName[1] = huhu-qa
+data-typeName[1] = answer
+
+data-schemaName[2] = huhu-user
+data-tableName[2] = user
+data-indexName[2] = huhu-user
+data-typeName[2] = user
+
+; huhu-qa.question.schemaName = huhu-qa
+; huhu-qa.question.tableName = question
+; huhu-qa.question.indexName = huhu-qa
+; huhu-qa.question.typeName = question
+
+; huhu-qa.answer.schemaName = huhu-qa
+; huhu-qa.answer.tableName = answer
+; huhu-qa.answer.indexName = huhu-qa
+; huhu-qa.answer.typeName = answer
+
+; huhu-user.user.schemaName = huhu-user
+; huhu-user.user.tableName = user
+; huhu-user.user.indexName = huhu-user
+; huhu-user.user.typeName = user
+
 
 
 
